Ensure logging configured and fix newline

--- a/notebooks/01_utils_logging.ipynb
+++ b/notebooks/01_utils_logging.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import logging\n",
+    "\n",
+    "logger = logging.getLogger(__name__)\n",
+    "if not logger.handlers:\n",
+    "    handler = logging.StreamHandler()\n",
+    "    formatter = logging.Formatter(\"%(asctime)s %(levelname)s %(name)s - %(message)s\")\n",
+    "    handler.setFormatter(formatter)\n",
+    "    logger.addHandler(handler)\n",
+    "logger.setLevel(logging.INFO)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "0",
    "metadata": {},
@@ -119,7 +136,7 @@
     "    StructField(\"delta_table\",      StringType(),    True),   # Target Bronze table\n",
     "])\n",
     "\n",
-    "print(f\"Bronze log schema defined: {BRONZE_LOG_TABLE_FULLNAME}\")"
+    "logger.info(f\"Bronze log schema defined: {BRONZE_LOG_TABLE_FULLNAME}\")"
    ]
   },
   {
@@ -176,7 +193,7 @@
     "        ]\n",
     ")\n",
     "\n",
-    "print(f\"Bronze summary schema defined: {BRONZE_SUMMARY_TABLE_FULLNAME}\")"
+    "logger.info(f\"Bronze summary schema defined: {BRONZE_SUMMARY_TABLE_FULLNAME}\")"
    ]
   },
   {
@@ -236,7 +253,7 @@
     "    StructField(\"silver_table\",     StringType(),    True),   # Target Silver table\n",
     "])\n",
     "\n",
-    "print(f\"Silver log schema defined: {SILVER_LOG_TABLE_FULLNAME}\")"
+    "logger.info(f\"Silver log schema defined: {SILVER_LOG_TABLE_FULLNAME}\")"
    ]
   },
   {
@@ -286,7 +303,7 @@
     "    StructField(\"failed_tables\",       StringType(),    True),\n",
     "])\n",
     "\n",
-    "print(f\"Silver summary schema defined: {SILVER_SUMMARY_TABLE_FULLNAME}\")"
+    "logger.info(f\"Silver summary schema defined: {SILVER_SUMMARY_TABLE_FULLNAME}\")"
    ]
   },
   {
@@ -306,7 +323,7 @@
    "source": [
     "# Ensure logs schema exists\n",
     "spark.sql(f\"CREATE SCHEMA IF NOT EXISTS {LOG_SCHEMA}\")\n",
-    "print(f\"✓ Schema '{LOG_SCHEMA}' ready\")\n",
+    "logger.info(f\"✓ Schema '{LOG_SCHEMA}' ready\")\n",
     "\n",
     "if not spark.catalog.tableExists(BRONZE_LOG_TABLE_FULLNAME):\n",
     "    empty_df = spark.createDataFrame([], bronze_processing_log_schema)\n",
@@ -338,7 +355,7 @@
     "         .mode(\"append\")   # of .mode(\"ignore\")\n",
     "         .saveAsTable(SILVER_SUMMARY_TABLE_FULLNAME))\n",
     "\n",
-    "print(\"\\n✓ All log tables ready\")"
+    "logger.info(\"\\n✓ All log tables ready\")"
    ]
   },
   {
@@ -384,7 +401,7 @@
     "    return error_msg[:max_length] + \"... [TRUNCATED]\"\n",
     "\n",
     "\n",
-    "print(\"✓ Helper functions defined\")"
+    "logger.info(\"✓ Helper functions defined\")"
    ]
   },
   {
@@ -456,7 +473,7 @@
     "       .mode(\"append\")\n",
     "       .saveAsTable(BRONZE_LOG_TABLE_FULLNAME))\n",
     "    \n",
-    "    print(f\"✓ Logged {len(bronze_results)} Bronze records to {BRONZE_LOG_TABLE_FULLNAME}\")\n",
+    "    logger.info(f\"✓ Logged {len(bronze_results)} Bronze records to {BRONZE_LOG_TABLE_FULLNAME}\")\n",
     "\n",
     "def log_bronze_summary(summary: dict) -> str:\n",
     "    \"\"\"\n",
@@ -515,7 +532,7 @@
     "    return log_id\n",
     "\n",
     "\n",
-    "print(\"✓ Bronze logging functions defined\")"
+    "logger.info(\"✓ Bronze logging functions defined\")"
    ]
   },
   {
@@ -592,7 +609,7 @@
     "       .mode(\"append\")\n",
     "       .saveAsTable(SILVER_LOG_TABLE_FULLNAME))\n",
     "    \n",
-    "    print(f\"✓ Logged {len(records)} Silver records to {SILVER_LOG_TABLE_FULLNAME}\")\n",
+    "    logger.info(f\"✓ Logged {len(records)} Silver records to {SILVER_LOG_TABLE_FULLNAME}\")\n",
     "\n",
     "\n",
     "def log_silver_summary(summary: Dict[str, Any]) -> None:\n",
@@ -640,10 +657,10 @@
     "       .mode(\"append\")\n",
     "       .saveAsTable(SILVER_SUMMARY_TABLE_FULLNAME))\n",
     "    \n",
-    "    print(f\"✓ Logged Silver summary to {SILVER_SUMMARY_TABLE_FULLNAME}\")\n",
+    "    logger.info(f\"✓ Logged Silver summary to {SILVER_SUMMARY_TABLE_FULLNAME}\")\n",
     "\n",
     "\n",
-    "print(\"✓ Silver logging functions defined\")"
+    "logger.info(\"✓ Silver logging functions defined\")"
    ]
   },
   {
@@ -756,7 +773,7 @@
     "    return latest[0].asDict()\n",
     "\n",
     "\n",
-    "print(\"✓ Query helper functions defined\")"
+    "logger.info(\"✓ Query helper functions defined\")"
    ]
   },
   {
@@ -776,9 +793,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# print(\"=\" * 80)\n",
-    "# print(\"LOGGING INFRASTRUCTURE VERIFICATION\")\n",
-    "# print(\"=\" * 80)\n",
+    "# logger.info(\"=\" * 80)\n",
+    "# logger.info(\"LOGGING INFRASTRUCTURE VERIFICATION\")\n",
+    "# logger.info(\"=\" * 80)\n",
     "\n",
     "# tables_to_check = [\n",
     "#     BRONZE_LOG_TABLE_FULLNAME,\n",
@@ -789,16 +806,16 @@
     "\n",
     "# for table_name in tables_to_check:\n",
     "#     if not spark.catalog.tableExists(table_name):\n",
-    "#         print(f\"✗ {table_name:<40} NOT FOUND\")\n",
+    "#         logger.info(f\"✗ {table_name:<40} NOT FOUND\")\n",
     "#         continue\n",
     "\n",
     "#     try:\n",
     "#         count = spark.table(table_name).count()\n",
-    "#         print(f\"✓ {table_name:<40} {count:>10,} rows\")\n",
+    "#         logger.info(f\"✓ {table_name:<40} {count:>10,} rows\")\n",
     "#     except Exception as e:\n",
-    "#         print(f\"! {table_name:<40} ERROR: {type(e).__name__}: {e}\")\n",
+    "#         logger.info(f\"! {table_name:<40} ERROR: {type(e).__name__}: {e}\")\n",
     "\n",
-    "# print(\"\\n✓ Logging infrastructure ready for Bronze and Silver processing\")"
+    "# logger.info(\"\\n✓ Logging infrastructure ready for Bronze and Silver processing\")"
    ]
   }
  ],
