--- a/notebooks/10_bronze_load.ipynb
+++ b/notebooks/10_bronze_load.ipynb
@@ -1,11 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import logging\n",
+    "\n",
+    "logger = logging.getLogger(__name__)\n",
+    "if not logger.handlers:\n",
+    "    handler = logging.StreamHandler()\n",
+    "    formatter = logging.Formatter(\"%(asctime)s %(levelname)s %(name)s - %(message)s\")\n",
+    "    handler.setFormatter(formatter)\n",
+    "    logger.addHandler(handler)\n",
+    "logger.setLevel(logging.INFO)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "0",
    "metadata": {},
    "source": [
-    "# 10 — Bronze Load Worker\n",
+    "# 10 \u2014 Bronze Load Worker\n",
     "\n",
     "This notebook defines the worker function that loads a **single table** from parquet into a Bronze Delta table.\n",
     "\n",
@@ -74,7 +91,7 @@
     "from modules.path_utils import build_parquet_dir\n",
     "from pyspark.sql import functions as F\n",
     "\n",
-    "print(\"✓ Imports loaded\")"
+    "logger.info(\"\u2713 Imports loaded\")"
    ]
   },
   {
@@ -90,13 +107,13 @@
     "try:\n",
     "    # Als 02_utils_config al gedraaid heeft, staat BASE_PATH al in de globals\n",
     "    BASE_PATH  # type: ignore[name-defined]\n",
-    "    print(f\"✓ Base path (bronze worker): {BASE_PATH}\")\n",
+    "    logger.info(f\"\u2713 Base path (bronze worker): {BASE_PATH}\")\n",
     "    env_type = (\n",
     "        \"Fabric\" if \"/lakehouse/default/Files\" in BASE_PATH\n",
     "        else \"Custom Cluster\" if \"/data/lakehouse/\" in BASE_PATH\n",
     "        else \"Cluster/Relative\"\n",
     "    )\n",
-    "    print(f\"✓ Environment (bronze worker): {env_type}\")\n",
+    "    logger.info(f\"\u2713 Environment (bronze worker): {env_type}\")\n",
     "except NameError:\n",
     "    # Fallback zodat je 10_bronze_load ook stand-alone kunt draaien\n",
     "    import glob\n",
@@ -130,8 +147,8 @@
     "        else \"Custom Cluster\" if \"/data/lakehouse/\" in BASE_PATH\n",
     "        else \"Local/Relative\"\n",
     "    )\n",
-    "    print(f\"✓ Base path (bronze worker – fallback): {BASE_PATH}\")\n",
-    "    print(f\"✓ Environment (bronze worker – fallback): {env_type}\")\n"
+    "    logger.info(f\"\u2713 Base path (bronze worker \u2013 fallback): {BASE_PATH}\")\n",
+    "    logger.info(f\"\u2713 Environment (bronze worker \u2013 fallback): {env_type}\")\n"
    ]
   },
   {
@@ -193,7 +210,7 @@
     "\n",
     "\n",
     "\n",
-    "print(\"✓ Helper functions defined\")"
+    "logger.info(\"\u2713 Helper functions defined\")"
    ]
   },
   {
@@ -271,7 +288,7 @@
     "        duration = int((end_time - start_time).total_seconds())\n",
     "        \n",
     "        if debug:\n",
-    "            print(f\"[{table_name}] SKIPPED: unsupported load_mode '{load_mode}'\")\n",
+    "            logger.info(f\"[{table_name}] SKIPPED: unsupported load_mode '{load_mode}'\")\n",
     "        \n",
     "        return {\n",
     "            \"log_id\": log_id,\n",
@@ -306,9 +323,9 @@
     "    parquet_glob = f\"{parquet_dir}/*.parquet\"\n",
     "    \n",
     "    if debug:\n",
-    "        print(f\"[{table_name}] Starting ({load_mode})\")\n",
-    "        print(f\"  Parquet: {parquet_dir}\")\n",
-    "        print(f\"  Target: {delta_table_full}\")\n",
+    "        logger.info(f\"[{table_name}] Starting ({load_mode})\")\n",
+    "        logger.info(f\"  Parquet: {parquet_dir}\")\n",
+    "        logger.info(f\"  Target: {delta_table_full}\")\n",
     "    \n",
     "    # ========================================================================\n",
     "    # STEP 1: Read Parquet\n",
@@ -324,7 +341,7 @@
     "            duration = int((end_time - start_time).total_seconds())\n",
     "            \n",
     "            if debug:\n",
-    "                print(f\"[{table_name}] SKIPPED: No parquet files in {parquet_dir}\")\n",
+    "                logger.info(f\"[{table_name}] SKIPPED: No parquet files in {parquet_dir}\")\n",
     "            \n",
     "            return {\n",
     "                \"log_id\": log_id,\n",
@@ -349,7 +366,7 @@
     "            duration = int((end_time - start_time).total_seconds())\n",
     "            \n",
     "            if debug:\n",
-    "                print(f\"[{table_name}] FAILED reading parquet: {str(e)[:200]}\")\n",
+    "                logger.info(f\"[{table_name}] FAILED reading parquet: {str(e)[:200]}\")\n",
     "            \n",
     "            return {\n",
     "                \"log_id\": log_id,\n",
@@ -397,7 +414,7 @@
     "                    .withColumn(month_col, month(col(window_col)))\n",
     "                \n",
     "                if debug:\n",
-    "                    print(f\"  Added partitioning: {year_col}, {month_col} from {window_col}\")\n",
+    "                    logger.info(f\"  Added partitioning: {year_col}, {month_col} from {window_col}\")\n",
     "    \n",
     "    # ========================================================================\n",
     "    # STEP 3: Write to Delta\n",
@@ -414,7 +431,7 @@
     "                .partitionBy(\"_bronze_load_ts\")\n",
     "            \n",
     "            if debug:\n",
-    "                print(f\"  Mode: APPEND with partition by _bronze_load_ts (CDC history)\")\n",
+    "                logger.info(f\"  Mode: APPEND with partition by _bronze_load_ts (CDC history)\")\n",
     "        \n",
     "        elif load_mode in (\"snapshot\", \"window\"):\n",
     "            # OVERWRITE entire table\n",
@@ -435,7 +452,7 @@
     "                        .partitionBy(year_col, month_col)\n",
     "                    \n",
     "                    if debug:\n",
-    "                        print(f\"  Mode: OVERWRITE with partitioning by {year_col}, {month_col}\")\n",
+    "                        logger.info(f\"  Mode: OVERWRITE with partitioning by {year_col}, {month_col}\")\n",
     "                else:\n",
     "                    # Unknown partition type, just overwrite\n",
     "                    writer = df_with_meta.write \\\n",
@@ -450,7 +467,7 @@
     "                    .option(\"overwriteSchema\", \"true\")\n",
     "                \n",
     "                if debug:\n",
-    "                    print(f\"  Mode: OVERWRITE\")\n",
+    "                    logger.info(f\"  Mode: OVERWRITE\")\n",
     "        \n",
     "        # Execute write\n",
     "        writer.saveAsTable(delta_table_full)\n",
@@ -462,7 +479,7 @@
     "            duration = int((end_time - start_time).total_seconds())\n",
     "            \n",
     "            if debug:\n",
-    "                print(f\"[{table_name}] EMPTY: Parquet exists but contains 0 rows\")\n",
+    "                logger.info(f\"[{table_name}] EMPTY: Parquet exists but contains 0 rows\")\n",
     "            \n",
     "            return {\n",
     "                \"log_id\": log_id,\n",
@@ -489,7 +506,7 @@
     "        # Try recovery if Delta table looks corrupt\n",
     "        if is_probably_corrupt_delta(e):\n",
     "            if debug:\n",
-    "                print(f\"[{table_name}] Write failed, attempting DROP+RECREATE: {str(e)[:200]}\")\n",
+    "                logger.info(f\"[{table_name}] Write failed, attempting DROP+RECREATE: {str(e)[:200]}\")\n",
     "            \n",
     "            try:\n",
     "                # Drop and recreate\n",
@@ -531,20 +548,20 @@
     "                error_message = f\"Initial write failed but table was recreated. Original error: {str(e)[:300]}\"\n",
     "                \n",
     "                if debug:\n",
-    "                    print(f\"[{table_name}] Recovery successful\")\n",
+    "                    logger.info(f\"[{table_name}] Recovery successful\")\n",
     "                \n",
     "            except Exception as e2:\n",
     "                status = \"FAILED\"\n",
     "                error_message = f\"Write failed and recovery failed: {str(e2)[:500]}\"\n",
     "                \n",
     "                if debug:\n",
-    "                    print(f\"[{table_name}] Recovery FAILED: {str(e2)[:200]}\")\n",
+    "                    logger.info(f\"[{table_name}] Recovery FAILED: {str(e2)[:200]}\")\n",
     "        else:\n",
     "            status = \"FAILED\"\n",
     "            error_message = f\"Write failed: {str(e)[:500]}\"\n",
     "            \n",
     "            if debug:\n",
-    "                print(f\"[{table_name}] FAILED: {str(e)[:200]}\")\n",
+    "                logger.info(f\"[{table_name}] FAILED: {str(e)[:200]}\")\n",
     "    \n",
     "    # ========================================================================\n",
     "    # STEP 4: Return Results\n",
@@ -554,7 +571,7 @@
     "    duration = int((end_time - start_time).total_seconds())\n",
     "    \n",
     "    if debug:\n",
-    "        print(f\"[{table_name}] {status} in {duration}s ({rows_processed:,} rows)\")\n",
+    "        logger.info(f\"[{table_name}] {status} in {duration}s ({rows_processed:,} rows)\")\n",
     "    \n",
     "    return {\n",
     "        \"log_id\": log_id,\n",
@@ -575,7 +592,7 @@
     "    }\n",
     "\n",
     "\n",
-    "print(\"✓ Bronze worker function defined\")"
+    "logger.info(\"\u2713 Bronze worker function defined\")"
    ]
   },
   {
@@ -620,14 +637,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"\\n\" + \"=\" * 80)\n",
-    "print(\"BRONZE WORKER READY\")\n",
-    "print(\"=\" * 80)\n",
-    "print(f\"Base path: {BASE_PATH}\")\n",
-    "print(f\"Environment: {'Fabric' if '/lakehouse' in BASE_PATH else 'Local'}\")\n",
-    "print(\"\\nFunction available: process_bronze_table(table_def, source_name, run_ts, ...)\")\n",
-    "print(\"\\n⚠️  Remember to set RUN_ID before calling process_bronze_table()\")\n",
-    "print(\"✓ Bronze worker notebook loaded successfully\")"
+    "logger.info(\"\\n\" + \"=\" * 80)\n",
+    "logger.info(\"BRONZE WORKER READY\")\n",
+    "logger.info(\"=\" * 80)\n",
+    "logger.info(f\"Base path: {BASE_PATH}\")\n",
+    "logger.info(f\"Environment: {'Fabric' if '/lakehouse' in BASE_PATH else 'Local'}\")\n",
+    "logger.info(\"\\nFunction available: process_bronze_table(table_def, source_name, run_ts, ...)\")\n",
+    "logger.info(\"\\n\u26a0\ufe0f  Remember to set RUN_ID before calling process_bronze_table()\")\n",
+    "logger.info(\"\u2713 Bronze worker notebook loaded successfully\")"
    ]
   }
  ],
