--- a/notebooks/20_silver_cdc_merge.ipynb
+++ b/notebooks/20_silver_cdc_merge.ipynb
@@ -1,11 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import logging\n",
+    "\n",
+    "logger = logging.getLogger(__name__)\n",
+    "if not logger.handlers:\n",
+    "    handler = logging.StreamHandler()\n",
+    "    formatter = logging.Formatter(\"%(asctime)s %(levelname)s %(name)s - %(message)s\")\n",
+    "    handler.setFormatter(formatter)\n",
+    "    logger.addHandler(handler)\n",
+    "logger.setLevel(logging.INFO)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "0",
    "metadata": {},
    "source": [
-    "# 20 — Silver CDC Merge Worker\n",
+    "# 20 \u2014 Silver CDC Merge Worker\n",
     "\n",
     "This notebook performs Change Data Capture (CDC) merge from Bronze to Silver layer.\n",
     "\n",
@@ -16,19 +33,19 @@
     "Bronze incremental tables use **APPEND with run_ts partitioning**:\n",
     "```\n",
     "bronze.Dim_Relatie/\n",
-    "  ├── _bronze_load_ts=20251101T060000/  -- 1000 rows (initial)\n",
-    "  ├── _bronze_load_ts=20251108T060000/  -- 50 rows (delta)\n",
-    "  └── _bronze_load_ts=20251115T060000/  -- 100 rows (delta)\n",
+    "  \u251c\u2500\u2500 _bronze_load_ts=20251101T060000/  -- 1000 rows (initial)\n",
+    "  \u251c\u2500\u2500 _bronze_load_ts=20251108T060000/  -- 50 rows (delta)\n",
+    "  \u2514\u2500\u2500 _bronze_load_ts=20251115T060000/  -- 100 rows (delta)\n",
     "```\n",
     "\n",
     "Silver CDC merge:\n",
     "1. **Reconstruct current Bronze state** (latest row per business key)\n",
     "2. **Calculate row hash** for change detection\n",
     "3. **Compare with Silver**:\n",
-    "   - Keys in Bronze but not Silver → **INSERT**\n",
-    "   - Keys in both with different hash → **UPDATE**\n",
-    "   - Keys in Silver but not Bronze → **DELETE** (marked as deleted)\n",
-    "   - Keys in both with same hash → **UNCHANGED**\n",
+    "   - Keys in Bronze but not Silver \u2192 **INSERT**\n",
+    "   - Keys in both with different hash \u2192 **UPDATE**\n",
+    "   - Keys in Silver but not Bronze \u2192 **DELETE** (marked as deleted)\n",
+    "   - Keys in both with same hash \u2192 **UNCHANGED**\n",
     "\n",
     "## Key Features\n",
     "\n",
@@ -94,12 +111,12 @@
     "\n",
     "try:\n",
     "    from hash_utils import add_row_hash, compare_hash_differences\n",
-    "    print(\"✓ hash_utils imported successfully\")\n",
+    "    logger.info(\"\u2713 hash_utils imported successfully\")\n",
     "except ImportError as e:\n",
-    "    print(f\"⚠️  Warning: Could not import hash_utils: {e}\")\n",
-    "    print(\"   Make sure modules/hash_utils.py is in sys.path\")\n",
+    "    logger.info(f\"\u26a0\ufe0f  Warning: Could not import hash_utils: {e}\")\n",
+    "    logger.info(\"   Make sure modules/hash_utils.py is in sys.path\")\n",
     "\n",
-    "print(\"✓ Imports loaded\")"
+    "logger.info(\"\u2713 Imports loaded\")"
    ]
   },
   {
@@ -177,7 +194,7 @@
     "    ]\n",
     "\n",
     "\n",
-    "print(\"✓ Helper functions defined\")"
+    "logger.info(\"\u2713 Helper functions defined\")"
    ]
   },
   {
@@ -238,7 +255,7 @@
     "        end_time = datetime.utcnow()\n",
     "        \n",
     "        if debug:\n",
-    "            print(f\"[{table_name}] SKIPPED: No business_keys defined (required for CDC)\")\n",
+    "            logger.info(f\"[{table_name}] SKIPPED: No business_keys defined (required for CDC)\")\n",
     "        \n",
     "        return {\n",
     "            \"log_id\": log_id,\n",
@@ -282,10 +299,10 @@
     "        silver_table_full = f\"silver.{table_name}\"\n",
     "    \n",
     "    if debug:\n",
-    "        print(f\"\\n[{table_name}] Starting Silver CDC merge ({load_mode})\")\n",
-    "        print(f\"  Bronze: {bronze_table_full}\")\n",
-    "        print(f\"  Silver: {silver_table_full}\")\n",
-    "        print(f\"  Business keys: {business_keys}\")\n",
+    "        logger.info(f\"\\n[{table_name}] Starting Silver CDC merge ({load_mode})\")\n",
+    "        logger.info(f\"  Bronze: {bronze_table_full}\")\n",
+    "        logger.info(f\"  Silver: {silver_table_full}\")\n",
+    "        logger.info(f\"  Business keys: {business_keys}\")\n",
     "    \n",
     "    try:\n",
     "        # ====================================================================\n",
@@ -302,14 +319,14 @@
     "            \n",
     "            if debug:\n",
     "                bronze_count = bronze_current.count()\n",
-    "                print(f\"  Reconstructed Bronze state: {bronze_count:,} rows\")\n",
+    "                logger.info(f\"  Reconstructed Bronze state: {bronze_count:,} rows\")\n",
     "        else:\n",
     "            # Snapshot/window: Bronze contains current state\n",
     "            bronze_current = spark.table(bronze_table_full)\n",
     "            \n",
     "            if debug:\n",
     "                bronze_count = bronze_current.count()\n",
-    "                print(f\"  Bronze snapshot: {bronze_count:,} rows\")\n",
+    "                logger.info(f\"  Bronze snapshot: {bronze_count:,} rows\")\n",
     "        \n",
     "        # Get business columns only (exclude metadata)\n",
     "        business_cols = get_business_columns(bronze_current)\n",
@@ -326,7 +343,7 @@
     "        )\n",
     "        \n",
     "        if debug:\n",
-    "            print(f\"  Added row_hash to Bronze\")\n",
+    "            logger.info(f\"  Added row_hash to Bronze\")\n",
     "        \n",
     "        # ====================================================================\n",
     "        # STEP 3: Ensure Silver Table Exists\n",
@@ -335,7 +352,7 @@
     "        if not spark.catalog.tableExists(silver_table_full):\n",
     "            # Create Silver table with initial data\n",
     "            if debug:\n",
-    "                print(f\"  Creating new Silver table: {silver_table_full}\")\n",
+    "                logger.info(f\"  Creating new Silver table: {silver_table_full}\")\n",
     "            \n",
     "            # Add Silver metadata columns\n",
     "            silver_initial = bronze_with_hash \\\n",
@@ -356,7 +373,7 @@
     "            duration = int((end_time - start_time).total_seconds())\n",
     "            \n",
     "            if debug:\n",
-    "                print(f\"  Created Silver table with {rows_inserted:,} rows\")\n",
+    "                logger.info(f\"  Created Silver table with {rows_inserted:,} rows\")\n",
     "            \n",
     "            return {\n",
     "                \"log_id\": log_id,\n",
@@ -410,7 +427,7 @@
     "        \n",
     "        # Execute MERGE\n",
     "        if debug:\n",
-    "            print(f\"  Executing MERGE...\")\n",
+    "            logger.info(f\"  Executing MERGE...\")\n",
     "        \n",
     "        merge_builder = silver_delta.alias(\"target\").merge(\n",
     "            bronze_for_merge.alias(\"source\"),\n",
@@ -432,7 +449,7 @@
     "        merge_result = merge_builder.execute()\n",
     "        \n",
     "        if debug:\n",
-    "            print(f\"  MERGE completed\")\n",
+    "            logger.info(f\"  MERGE completed\")\n",
     "        \n",
     "        # ====================================================================\n",
     "        # STEP 5: DELETE Detection (Incremental only)\n",
@@ -442,7 +459,7 @@
     "        \n",
     "        if load_mode == \"incremental\":\n",
     "            if debug:\n",
-    "                print(f\"  Detecting deletes...\")\n",
+    "                logger.info(f\"  Detecting deletes...\")\n",
     "            \n",
     "            # Get active keys from Silver\n",
     "            silver_current = spark.table(silver_table_full).where(\"is_deleted = false\")\n",
@@ -458,7 +475,7 @@
     "            \n",
     "            if deleted_count > 0:\n",
     "                if debug:\n",
-    "                    print(f\"  Found {deleted_count:,} deleted keys\")\n",
+    "                    logger.info(f\"  Found {deleted_count:,} deleted keys\")\n",
     "                \n",
     "                # Mark as deleted (soft delete)\n",
     "                delete_merge_condition = \" AND \".join([\n",
@@ -478,7 +495,7 @@
     "                rows_deleted = deleted_count\n",
     "            else:\n",
     "                if debug:\n",
-    "                    print(f\"  No deletes detected\")\n",
+    "                    logger.info(f\"  No deletes detected\")\n",
     "        \n",
     "        # ====================================================================\n",
     "        # STEP 6: Calculate Statistics\n",
@@ -525,7 +542,7 @@
     "        bronze_rows = None\n",
     "        \n",
     "        if debug:\n",
-    "            print(f\"[{table_name}] FAILED: {str(e)[:200]}\")\n",
+    "            logger.info(f\"[{table_name}] FAILED: {str(e)[:200]}\")\n",
     "    \n",
     "    # ========================================================================\n",
     "    # STEP 7: Return Results\n",
@@ -535,9 +552,9 @@
     "    duration = int((end_time - start_time).total_seconds())\n",
     "    \n",
     "    if debug and status == \"SUCCESS\":\n",
-    "        print(f\"[{table_name}] SUCCESS in {duration}s\")\n",
-    "        print(f\"  Silver rows: {total_silver_rows:,}\")\n",
-    "        print(f\"  Deleted: {rows_deleted}\")\n",
+    "        logger.info(f\"[{table_name}] SUCCESS in {duration}s\")\n",
+    "        logger.info(f\"  Silver rows: {total_silver_rows:,}\")\n",
+    "        logger.info(f\"  Deleted: {rows_deleted}\")\n",
     "    \n",
     "    return {\n",
     "        \"log_id\": log_id,\n",
@@ -562,7 +579,7 @@
     "    }\n",
     "\n",
     "\n",
-    "print(\"✓ Silver CDC merge function defined\")"
+    "logger.info(\"\u2713 Silver CDC merge function defined\")"
    ]
   },
   {
@@ -606,20 +623,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"\\n\" + \"=\" * 80)\n",
-    "print(\"SILVER CDC MERGE WORKER READY\")\n",
-    "print(\"=\" * 80)\n",
-    "print(\"\\nFunction available: process_silver_cdc_merge(table_def, source_name, run_ts, ...)\")\n",
-    "print(\"\\nCDC Capabilities:\")\n",
-    "print(\"  ✓ INSERT detection (new keys)\")\n",
-    "print(\"  ✓ UPDATE detection (changed rows via hash)\")\n",
-    "print(\"  ✓ DELETE detection (missing keys from Bronze)\")\n",
-    "print(\"  ✓ UNCHANGED tracking (same hash)\")\n",
-    "print(\"\\n⚠️  Remember to:\")\n",
-    "print(\"  1. Set RUN_ID before calling function\")\n",
-    "print(\"  2. Ensure business_keys defined in table config\")\n",
-    "print(\"  3. Run Bronze load successfully first\")\n",
-    "print(\"\\n✓ Silver CDC merge notebook loaded successfully\")"
+    "logger.info(\"\\n\" + \"=\" * 80)\n",
+    "logger.info(\"SILVER CDC MERGE WORKER READY\")\n",
+    "logger.info(\"=\" * 80)\n",
+    "logger.info(\"\\nFunction available: process_silver_cdc_merge(table_def, source_name, run_ts, ...)\")\n",
+    "logger.info(\"\\nCDC Capabilities:\")\n",
+    "logger.info(\"  \u2713 INSERT detection (new keys)\")\n",
+    "logger.info(\"  \u2713 UPDATE detection (changed rows via hash)\")\n",
+    "logger.info(\"  \u2713 DELETE detection (missing keys from Bronze)\")\n",
+    "logger.info(\"  \u2713 UNCHANGED tracking (same hash)\")\n",
+    "logger.info(\"\\n\u26a0\ufe0f  Remember to:\")\n",
+    "logger.info(\"  1. Set RUN_ID before calling function\")\n",
+    "logger.info(\"  2. Ensure business_keys defined in table config\")\n",
+    "logger.info(\"  3. Run Bronze load successfully first\")\n",
+    "logger.info(\"\\n\u2713 Silver CDC merge notebook loaded successfully\")"
    ]
   }
  ],
