--- a/notebooks/11_bronze_watermark_merge.ipynb
+++ b/notebooks/11_bronze_watermark_merge.ipynb
@@ -1,11 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import logging\n",
+    "\n",
+    "logger = logging.getLogger(__name__)\n",
+    "if not logger.handlers:\n",
+    "    handler = logging.StreamHandler()\n",
+    "    formatter = logging.Formatter(\"%(asctime)s %(levelname)s %(name)s - %(message)s\")\n",
+    "    handler.setFormatter(formatter)\n",
+    "    logger.addHandler(handler)\n",
+    "logger.setLevel(logging.INFO)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "0",
    "metadata": {},
    "source": [
-    "# 11 — Bronze Watermark Merge\n",
+    "# 11 \u2014 Bronze Watermark Merge\n",
     "\n",
     "Merges watermark values from incremental load runtime files back into the central watermarks configuration.\n",
     "\n",
@@ -75,7 +92,7 @@
     "import pyarrow.parquet as pq\n",
     "import pyarrow.dataset as ds\n",
     "\n",
-    "print(\"✓ Imports loaded\")"
+    "logger.info(\"\u2713 Imports loaded\")"
    ]
   },
   {
@@ -102,8 +119,8 @@
     "\n",
     "BASE_PATH = detect_base_path()\n",
     "\n",
-    "print(f\"✓ Base path: {BASE_PATH}\")\n",
-    "print(f\"✓ Environment: {'Fabric' if '/lakehouse' in BASE_PATH else 'Local'}\")"
+    "logger.info(f\"\u2713 Base path: {BASE_PATH}\")\n",
+    "logger.info(f\"\u2713 Environment: {'Fabric' if '/lakehouse' in BASE_PATH else 'Local'}\")"
    ]
   },
   {
@@ -126,11 +143,11 @@
     "\n",
     "wm_folder_full = f'{BASE_PATH}/{wm_folder}'\n",
     "\n",
-    "print(f\"\\nParameters:\")\n",
-    "print(f\"  Source: {source}\")\n",
-    "print(f\"  Run ID: {run_id}\")\n",
-    "print(f\"  Watermark config: {wm_configpath_full}\")\n",
-    "print(f\"  Runtime folder: {wm_folder_full}\")"
+    "logger.info(f\"\\nParameters:\")\n",
+    "logger.info(f\"  Source: {source}\")\n",
+    "logger.info(f\"  Run ID: {run_id}\")\n",
+    "logger.info(f\"  Watermark config: {wm_configpath_full}\")\n",
+    "logger.info(f\"  Runtime folder: {wm_folder_full}\")"
    ]
   },
   {
@@ -155,7 +172,7 @@
     "with open(wm_configpath_full, 'r') as f:\n",
     "    cfg = json.load(f)\n",
     "\n",
-    "print(f\"✓ Loaded watermarks config\")"
+    "logger.info(f\"\u2713 Loaded watermarks config\")"
    ]
   },
   {
@@ -173,7 +190,7 @@
     "    raise ValueError(f\"Source '{source}' not found in watermarks config\")\n",
     "\n",
     "tables_map = src.get(\"tables\", {})\n",
-    "print(f\"✓ Found source '{source}' with {len(tables_map)} table watermarks\")"
+    "logger.info(f\"\u2713 Found source '{source}' with {len(tables_map)} table watermarks\")"
    ]
   },
   {
@@ -196,18 +213,18 @@
    "source": [
     "# Check if runtime folder exists\n",
     "if not os.path.exists(wm_folder_full):\n",
-    "    print(f\"⚠️  No watermark runtime folder found: {wm_folder_full}\")\n",
-    "    print(f\"   This is normal if no incremental tables were processed\")\n",
+    "    logger.info(f\"\u26a0\ufe0f  No watermark runtime folder found: {wm_folder_full}\")\n",
+    "    logger.info(f\"   This is normal if no incremental tables were processed\")\n",
     "    updates = {}\n",
     "else:\n",
-    "    print(f\"\\n📂 Reading watermark updates from: {wm_folder_full}\")\n",
+    "    logger.info(f\"\\n\ud83d\udcc2 Reading watermark updates from: {wm_folder_full}\")\n",
     "    updates = {}\n",
     "    \n",
     "    # List table folders\n",
     "    table_folders = [d for d in os.listdir(wm_folder_full) \n",
     "                     if os.path.isdir(os.path.join(wm_folder_full, d))]\n",
     "    \n",
-    "    print(f\"   Found {len(table_folders)} table folders\")\n",
+    "    logger.info(f\"   Found {len(table_folders)} table folders\")\n",
     "    \n",
     "    # Process each table folder\n",
     "    for table_name in table_folders:\n",
@@ -218,7 +235,7 @@
     "            parquet_files = [f for f in os.listdir(table_path) if f.endswith('.parquet')]\n",
     "            \n",
     "            if not parquet_files:\n",
-    "                print(f\"   ⚠️  {table_name}: No parquet files found\")\n",
+    "                logger.info(f\"   \u26a0\ufe0f  {table_name}: No parquet files found\")\n",
     "                continue\n",
     "            \n",
     "            # Read all parquets with PyArrow\n",
@@ -238,16 +255,16 @@
     "                if valid_watermarks:\n",
     "                    max_wm = max(valid_watermarks)\n",
     "                    updates[table_name] = max_wm\n",
-    "                    print(f\"   ✓ {table_name}: {max_wm}\")\n",
+    "                    logger.info(f\"   \u2713 {table_name}: {max_wm}\")\n",
     "                else:\n",
-    "                    print(f\"   ⚠️  {table_name}: No valid watermarks found\")\n",
+    "                    logger.info(f\"   \u26a0\ufe0f  {table_name}: No valid watermarks found\")\n",
     "            else:\n",
-    "                print(f\"   ⚠️  {table_name}: No watermark column or empty table\")\n",
+    "                logger.info(f\"   \u26a0\ufe0f  {table_name}: No watermark column or empty table\")\n",
     "        \n",
     "        except Exception as e:\n",
-    "            print(f\"   ⚠️  {table_name}: Error reading watermark - {str(e)[:80]}\")\n",
+    "            logger.info(f\"   \u26a0\ufe0f  {table_name}: Error reading watermark - {str(e)[:80]}\")\n",
     "    \n",
-    "    print(f\"\\n✓ Found {len(updates)} watermark updates\")"
+    "    logger.info(f\"\\n\u2713 Found {len(updates)} watermark updates\")"
    ]
   },
   {
@@ -266,23 +283,23 @@
    "outputs": [],
    "source": [
     "if updates:\n",
-    "    print(\"\\n🔍 Comparing old vs new watermarks:\")\n",
-    "    print(f\"{'Table':<30} {'Old Watermark':<25} {'New Watermark':<25} {'Status':<15}\")\n",
-    "    print(\"-\" * 95)\n",
+    "    logger.info(\"\\n\ud83d\udd0d Comparing old vs new watermarks:\")\n",
+    "    logger.info(f\"{'Table':<30} {'Old Watermark':<25} {'New Watermark':<25} {'Status':<15}\")\n",
+    "    logger.info(\"-\" * 95)\n",
     "    \n",
     "    for table, new_wm in sorted(updates.items()):\n",
     "        old_wm = tables_map.get(table)\n",
     "        \n",
     "        if old_wm == new_wm:\n",
-    "            status = \"✓ MATCH\"\n",
+    "            status = \"\u2713 MATCH\"\n",
     "        elif old_wm is None:\n",
-    "            status = \"🆕 NEW\"\n",
+    "            status = \"\ud83c\udd95 NEW\"\n",
     "        else:\n",
-    "            status = \"🔄 UPDATE\"\n",
+    "            status = \"\ud83d\udd04 UPDATE\"\n",
     "        \n",
-    "        print(f\"{table:<30} {str(old_wm):<25} {str(new_wm):<25} {status:<15}\")\n",
+    "        logger.info(f\"{table:<30} {str(old_wm):<25} {str(new_wm):<25} {status:<15}\")\n",
     "else:\n",
-    "    print(\"\\nℹ️  No watermark updates to process\")"
+    "    logger.info(\"\\n\u2139\ufe0f  No watermark updates to process\")"
    ]
   },
   {
@@ -317,12 +334,12 @@
     "            \"old\": old_wm,\n",
     "            \"new\": new_wm\n",
     "        })\n",
-    "        print(f\"  ✓ Updated {table}: {old_wm} → {new_wm}\")\n",
+    "        logger.info(f\"  \u2713 Updated {table}: {old_wm} \u2192 {new_wm}\")\n",
     "\n",
     "if changed > 0:\n",
-    "    print(f\"\\n✓ {changed} watermark(s) will be updated\")\n",
+    "    logger.info(f\"\\n\u2713 {changed} watermark(s) will be updated\")\n",
     "else:\n",
-    "    print(\"\\nℹ️  No watermark changes detected\")"
+    "    logger.info(\"\\n\u2139\ufe0f  No watermark changes detected\")"
    ]
   },
   {
@@ -346,7 +363,7 @@
    "outputs": [],
    "source": [
     "if changed > 0:\n",
-    "    print(\"\\n💾 Saving updated watermarks config...\")\n",
+    "    logger.info(\"\\n\ud83d\udcbe Saving updated watermarks config...\")\n",
     "    \n",
     "    tmp_path = wm_configpath_full + \".tmp\"\n",
     "    \n",
@@ -355,28 +372,28 @@
     "        with open(tmp_path, 'w') as f:\n",
     "            json.dump(cfg, f, indent=2)\n",
     "        \n",
-    "        print(f\"  ✓ Wrote temporary file: {tmp_path}\")\n",
+    "        logger.info(f\"  \u2713 Wrote temporary file: {tmp_path}\")\n",
     "        \n",
     "        # Atomic replace\n",
     "        os.replace(tmp_path, wm_configpath_full)\n",
     "        \n",
-    "        print(f\"  ✓ Replaced original file: {wm_configpath_full}\")\n",
-    "        print(\"\\n✓ Watermarks config saved successfully\")\n",
+    "        logger.info(f\"  \u2713 Replaced original file: {wm_configpath_full}\")\n",
+    "        logger.info(\"\\n\u2713 Watermarks config saved successfully\")\n",
     "        \n",
     "    except Exception as e:\n",
-    "        print(f\"\\n✗ Failed to save config: {str(e)}\")\n",
+    "        logger.info(f\"\\n\u2717 Failed to save config: {str(e)}\")\n",
     "        \n",
     "        # Cleanup temp file if it exists\n",
     "        if os.path.exists(tmp_path):\n",
     "            try:\n",
     "                os.remove(tmp_path)\n",
-    "                print(f\"  ✓ Cleaned up temporary file\")\n",
+    "                logger.info(f\"  \u2713 Cleaned up temporary file\")\n",
     "            except:\n",
     "                pass\n",
     "        \n",
     "        raise\n",
     "else:\n",
-    "    print(\"\\nℹ️  No changes to save\")"
+    "    logger.info(\"\\n\u2139\ufe0f  No changes to save\")"
    ]
   },
   {
@@ -406,19 +423,19 @@
     "    \"changes\": changes\n",
     "}\n",
     "\n",
-    "print(\"\\n\" + \"=\" * 80)\n",
-    "print(\"WATERMARK MERGE SUMMARY\")\n",
-    "print(\"=\" * 80)\n",
-    "print(f\"Source: {result['source']}\")\n",
-    "print(f\"Run ID: {result['run_id']}\")\n",
-    "print(f\"Watermark files processed: {result['updates_processed']}\")\n",
-    "print(f\"Watermarks changed: {result['watermarks_changed']}\")\n",
-    "print(f\"Config file updated: {result['config_updated']}\")\n",
-    "print(\"=\" * 80)\n",
+    "logger.info(\"\\n\" + \"=\" * 80)\n",
+    "logger.info(\"WATERMARK MERGE SUMMARY\")\n",
+    "logger.info(\"=\" * 80)\n",
+    "logger.info(f\"Source: {result['source']}\")\n",
+    "logger.info(f\"Run ID: {result['run_id']}\")\n",
+    "logger.info(f\"Watermark files processed: {result['updates_processed']}\")\n",
+    "logger.info(f\"Watermarks changed: {result['watermarks_changed']}\")\n",
+    "logger.info(f\"Config file updated: {result['config_updated']}\")\n",
+    "logger.info(\"=\" * 80)\n",
     "\n",
     "# Print result as JSON for pipeline parsing\n",
     "result_json = json.dumps(result)\n",
-    "print(f\"\\nRESULT_JSON: {result_json}\")"
+    "logger.info(f\"\\nRESULT_JSON: {result_json}\")"
    ]
   },
   {
@@ -443,8 +460,8 @@
     "    mssparkutils.notebook.exit(result_json)\n",
     "except NameError:\n",
     "    # mssparkutils not available (local environment)\n",
-    "    print(\"\\nℹ️  mssparkutils not available (local environment)\")\n",
-    "    print(\"   Notebook completed successfully\")"
+    "    logger.info(\"\\n\u2139\ufe0f  mssparkutils not available (local environment)\")\n",
+    "    logger.info(\"   Notebook completed successfully\")"
    ]
   }
  ],
